<resources>
	<string name="app_name">Looktab</string>
	<string name="ar">AR</string>
	<string name="my_check_in">MY CHECK IN</string>
	<string name="my_page">MY PAGE</string>
	<string name="my_review_history">MY REVIEW HISTORY</string>
	<string name="airdrop_alarm_setting">AIRDROP ALARM SETTING</string>
	<string name="cafe">CAFE</string>
	<string name="restaurant">RESTAURANT</string>
	<string name="bar">BAR</string>
	<string name="shopping">SHOPPING</string>
	<string name="cultural_life">LIFE</string>
	<string name="fitness">FITNESS</string>
	<string name="shop">Shop</string>
	<string name="food">Food</string>
	<string name="selfy">Selfy</string>
	<string name="airdrop_filter_a">What kind of place do you\nwant to be recommended?</string>
	<string name="airdrop_filter_b">Which picture do you \nwant to see?</string>
	<string name="airdrop_filter_c">Please select a time zone \nto receive the alarm!</string>
	<string name="create_a_review">Create a review</string>
	<string name="photo">PHOTO</string>
	<string name="review">REVIEW</string>
	<string name="save">Save</string>
	<string name="find_a_place_naround_me_now">Find a place\naround me now!</string>
	<string name="home">home</string>
</resources>