<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/layout_join"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<androidx.appcompat.widget.LinearLayoutCompat style="@style/JoinStyle3Layout">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/layout_item_cafe"
			style="@style/JoinStyleLayout">

			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/iv_item_cafe"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:adjustViewBounds="true"
				android:background="@drawable/box_focused"
				app:layout_constraintTop_toTopOf="parent">

				<ImageView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:adjustViewBounds="true"
					android:padding="3dp"

					android:src="@drawable/img_cafe"
					app:layout_constraintTop_toTopOf="parent" />


			</androidx.appcompat.widget.LinearLayoutCompat>

			<androidx.appcompat.widget.AppCompatImageView
				style="@style/JoinStyleImgCheck"
				app:layout_constraintEnd_toEndOf="@id/iv_item_cafe"
				app:layout_constraintTop_toTopOf="@id/iv_item_cafe" />

			<androidx.appcompat.widget.AppCompatTextView
				style="@style/JoinStyleText"
				android:layout_width="match_parent"
				android:text="@string/cafe"
				android:textColor="@color/gray600"
				app:layout_constraintTop_toBottomOf="@id/iv_item_cafe" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/layout_item_restaurant"
			style="@style/JoinStyleLayout">

			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/iv_item_restaurant"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:adjustViewBounds="true"
				android:background="@drawable/box_focused"
				app:layout_constraintTop_toTopOf="parent">

				<ImageView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:adjustViewBounds="true"
					android:padding="3dp"

					android:src="@drawable/img_restaurant"
					app:layout_constraintTop_toTopOf="parent" />


			</androidx.appcompat.widget.LinearLayoutCompat>

			<androidx.appcompat.widget.AppCompatImageView
				style="@style/JoinStyleImgCheck"
				app:layout_constraintEnd_toEndOf="@id/iv_item_restaurant"
				app:layout_constraintTop_toTopOf="@id/iv_item_restaurant" />

			<androidx.appcompat.widget.AppCompatTextView
				style="@style/JoinStyleText"
				android:layout_width="match_parent"
				android:text="@string/restaurant"
				android:textColor="@color/gray600"
				app:layout_constraintTop_toBottomOf="@id/iv_item_restaurant" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/layout_item_bar"
			style="@style/JoinStyleLayout">

			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/iv_item_bar"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:adjustViewBounds="true"
				android:background="@drawable/box_focused"
				app:layout_constraintTop_toTopOf="parent">

				<ImageView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:adjustViewBounds="true"
					android:padding="3dp"

					android:src="@drawable/img_bar"
					app:layout_constraintTop_toTopOf="parent" />


			</androidx.appcompat.widget.LinearLayoutCompat>

			<androidx.appcompat.widget.AppCompatImageView
				style="@style/JoinStyleImgCheck"
				app:layout_constraintEnd_toEndOf="@id/iv_item_bar"
				app:layout_constraintTop_toTopOf="@id/iv_item_bar" />

			<androidx.appcompat.widget.AppCompatTextView
				style="@style/JoinStyleText"
				android:layout_width="match_parent"
				android:text="@string/bar"
				android:textColor="@color/gray600"
				app:layout_constraintTop_toBottomOf="@id/iv_item_bar" />
		</androidx.constraintlayout.widget.ConstraintLayout>

	</androidx.appcompat.widget.LinearLayoutCompat>

	<androidx.appcompat.widget.LinearLayoutCompat style="@style/JoinStyle3Layout">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/layout_item_shopping"
			style="@style/JoinStyleLayout">

			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/iv_item_shopping"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:adjustViewBounds="true"
				android:background="@drawable/box_focused"
				app:layout_constraintTop_toTopOf="parent">

				<ImageView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:adjustViewBounds="true"
					android:padding="3dp"

					android:src="@drawable/img_shopping"
					app:layout_constraintTop_toTopOf="parent" />


			</androidx.appcompat.widget.LinearLayoutCompat>

			<androidx.appcompat.widget.AppCompatImageView
				style="@style/JoinStyleImgCheck"
				app:layout_constraintEnd_toEndOf="@id/iv_item_shopping"
				app:layout_constraintTop_toTopOf="@id/iv_item_shopping" />

			<androidx.appcompat.widget.AppCompatTextView
				style="@style/JoinStyleText"
				android:layout_width="match_parent"
				android:text="@string/shopping"
				android:textColor="@color/gray600"
				app:layout_constraintTop_toBottomOf="@id/iv_item_shopping" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/layout_item_cultural_life"
			style="@style/JoinStyleLayout">

			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/iv_item_cultural_life"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:adjustViewBounds="true"
				android:background="@drawable/box_focused"
				app:layout_constraintTop_toTopOf="parent">

				<ImageView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:adjustViewBounds="true"
					android:padding="3dp"

					android:src="@drawable/img_cultural_life"
					app:layout_constraintTop_toTopOf="parent" />


			</androidx.appcompat.widget.LinearLayoutCompat>

			<androidx.appcompat.widget.AppCompatImageView
				style="@style/JoinStyleImgCheck"
				app:layout_constraintEnd_toEndOf="@id/iv_item_cultural_life"
				app:layout_constraintTop_toTopOf="@id/iv_item_cultural_life" />

			<androidx.appcompat.widget.AppCompatTextView
				style="@style/JoinStyleText"
				android:layout_width="match_parent"
				android:text="@string/cultural_life"
				android:textColor="@color/gray600"
				app:layout_constraintTop_toBottomOf="@id/iv_item_cultural_life" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/layout_item_fitness"
			style="@style/JoinStyleLayout">

			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/iv_item_fitness"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:adjustViewBounds="true"
				android:background="@drawable/box_focused"
				app:layout_constraintTop_toTopOf="parent">

				<ImageView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:adjustViewBounds="true"
					android:padding="3dp"

					android:src="@drawable/img_fitness"
					app:layout_constraintTop_toTopOf="parent" />


			</androidx.appcompat.widget.LinearLayoutCompat>

			<androidx.appcompat.widget.AppCompatImageView
				style="@style/JoinStyleImgCheck"
				app:layout_constraintEnd_toEndOf="@id/iv_item_fitness"
				app:layout_constraintTop_toTopOf="@id/iv_item_fitness" />

			<androidx.appcompat.widget.AppCompatTextView
				style="@style/JoinStyleText"
				android:layout_width="match_parent"
				android:text="@string/fitness"
				android:textColor="@color/gray600"
				app:layout_constraintTop_toBottomOf="@id/iv_item_fitness" />
		</androidx.constraintlayout.widget.ConstraintLayout>

	</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>