<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/layout_join"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<androidx.appcompat.widget.LinearLayoutCompat style="@style/JoinStyle3Layout">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/layout_item_shop"
			style="@style/JoinStyleLayout">

			<ImageView
				android:id="@+id/iv_item_shop"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:adjustViewBounds="true"
				android:src="@drawable/img_shop"
				app:layout_constraintTop_toTopOf="parent" />

			<androidx.appcompat.widget.LinearLayoutCompat
				android:layout_width="0dp"
				android:layout_height="0dp"
				android:adjustViewBounds="true"
				android:background="@drawable/box_focused"
				app:layout_constraintBottom_toBottomOf="@id/iv_item_shop"
				app:layout_constraintEnd_toEndOf="@id/iv_item_shop"
				app:layout_constraintStart_toStartOf="@id/iv_item_shop"
				app:layout_constraintTop_toTopOf="@id/iv_item_shop" />

			<androidx.appcompat.widget.AppCompatImageView
				style="@style/JoinStyleImgCheck"
				app:layout_constraintEnd_toEndOf="@id/iv_item_shop"
				app:layout_constraintTop_toTopOf="@id/iv_item_shop" />

			<androidx.appcompat.widget.AppCompatTextView
				style="@style/JoinStyleText"
				android:layout_width="match_parent"
				android:text="@string/shop"
				android:textColor="@color/gray600"
				app:layout_constraintTop_toBottomOf="@id/iv_item_shop" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/layout_item_food"
			style="@style/JoinStyleLayout">

			<ImageView
				android:id="@+id/iv_item_food"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:adjustViewBounds="true"
				android:src="@drawable/img_food"
				app:layout_constraintTop_toTopOf="parent" />

			<androidx.appcompat.widget.LinearLayoutCompat
				android:layout_width="0dp"
				android:layout_height="0dp"
				android:adjustViewBounds="true"
				android:background="@drawable/box_focused"
				app:layout_constraintBottom_toBottomOf="@id/iv_item_food"
				app:layout_constraintEnd_toEndOf="@id/iv_item_food"
				app:layout_constraintStart_toStartOf="@id/iv_item_food"
				app:layout_constraintTop_toTopOf="@id/iv_item_food" />

			<androidx.appcompat.widget.AppCompatImageView
				style="@style/JoinStyleImgCheck"
				app:layout_constraintEnd_toEndOf="@id/iv_item_food"
				app:layout_constraintTop_toTopOf="@id/iv_item_food" />

			<androidx.appcompat.widget.AppCompatTextView
				style="@style/JoinStyleText"
				android:layout_width="match_parent"
				android:text="@string/food"
				android:textColor="@color/gray600"
				app:layout_constraintTop_toBottomOf="@id/iv_item_food" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/layout_item_selfy"
			style="@style/JoinStyleLayout">

			<ImageView
				android:id="@+id/iv_item_selfy"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:adjustViewBounds="true"
				android:src="@drawable/img_selfy"
				app:layout_constraintTop_toTopOf="parent" />

			<androidx.appcompat.widget.LinearLayoutCompat
				android:layout_width="0dp"
				android:layout_height="0dp"
				android:adjustViewBounds="true"
				android:background="@drawable/box_focused"
				app:layout_constraintBottom_toBottomOf="@id/iv_item_selfy"
				app:layout_constraintEnd_toEndOf="@id/iv_item_selfy"
				app:layout_constraintStart_toStartOf="@id/iv_item_selfy"
				app:layout_constraintTop_toTopOf="@id/iv_item_selfy" />

			<androidx.appcompat.widget.AppCompatImageView
				style="@style/JoinStyleImgCheck"
				app:layout_constraintEnd_toEndOf="@id/iv_item_selfy"
				app:layout_constraintTop_toTopOf="@id/iv_item_selfy" />

			<androidx.appcompat.widget.AppCompatTextView
				style="@style/JoinStyleText"
				android:layout_width="match_parent"
				android:text="@string/selfy"
				android:textColor="@color/gray600"
				app:layout_constraintTop_toBottomOf="@id/iv_item_selfy" />
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>